istio-one/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-one
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: service-one-canary
      stableService: service-one-stable
      trafficRouting:
        istio:
          virtualService:
            name: service-one-vsvc
            routes:
            - primary # At least one route is required
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: success-rate
      - pause: {}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: service-one
  template:
    metadata:
      labels:
        app: service-one
        istio-injection: enabled
    spec:
      containers:
      - name: service-one
        image: argoproj/rollouts-demo:purple
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
